assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID ':' TYPEID optional_assign ';'
   11        | error ';'

   12 formal_list: %empty
   13            | formal
   14            | formal_list ',' formal

   15 formal: OBJECTID ':' TYPEID

   16 optional_assign: %empty
   17                | ASSIGN expression

   18 expression: OBJECTID ASSIGN expression
   19           | expression '.' OBJECTID '(' expression_list1 ')'
   20           | expression '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   21           | OBJECTID '(' expression_list1 ')'
   22           | IF expression THEN expression ELSE expression FI
   23           | WHILE expression LOOP expression POOL
   24           | '{' expression_list2 '}'
   25           | LET let
   26           | CASE expression OF case_list ESAC
   27           | NEW TYPEID
   28           | ISVOID expression
   29           | expression '+' expression
   30           | expression '-' expression
   31           | expression '*' expression
   32           | expression '/' expression
   33           | '~' expression
   34           | expression '<' expression
   35           | expression LE expression
   36           | expression '=' expression
   37           | NOT expression
   38           | '(' expression ')'
   39           | OBJECTID
   40           | INT_CONST
   41           | STR_CONST
   42           | BOOL_CONST

   43 expression_list1: %empty
   44                 | expression
   45                 | expression_list1 ',' expression

   46 expression_list2: expression ';'
   47                 | expression_list2 expression ';'
   48                 | error ';'

   49 let: OBJECTID ':' TYPEID optional_assign IN expression
   50    | OBJECTID ':' TYPEID optional_assign ',' let
   51    | error IN expression
   52    | error ',' let

   53 case_list: case
   54          | case_list case

   55 case: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 19 20 21 38
    ')' (41) 9 19 20 21 38
    '*' (42) 31
    '+' (43) 29
    ',' (44) 14 45 50 52
    '-' (45) 30
    '.' (46) 19 20
    '/' (47) 32
    ':' (58) 9 10 15 49 50 55
    ';' (59) 4 5 6 9 10 11 46 47 48 55
    '<' (60) 34
    '=' (61) 36
    '@' (64) 20
    '{' (123) 4 5 9 24
    '}' (125) 4 5 9 24
    '~' (126) 33
    error (256) 6 11 48 51 52
    CLASS (258) 4 5
    ELSE (259) 22
    FI (260) 22
    IF (261) 22
    IN (262) 49 51
    INHERITS (263) 5
    LET (264) 25
    LOOP (265) 23
    POOL (266) 23
    THEN (267) 22
    WHILE (268) 23
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 55
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 9 10 15 20 27 49 50 55
    OBJECTID <symbol> (279) 9 10 15 18 19 20 21 39 49 50 55
    ASSIGN (280) 17 18
    NOT (281) 37
    LE (282) 35
    ERROR (283)
    FLAG (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (50)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (51)
        on left: 9 10 11
        on right: 8
    formal_list <formals> (52)
        on left: 12 13 14
        on right: 9 14
    formal <formal> (53)
        on left: 15
        on right: 13 14
    optional_assign <expression> (54)
        on left: 16 17
        on right: 10 49 50
    expression <expression> (55)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 9 17 18 19 20 22 23 26 28 29 30 31 32 33 34 35 36 37 38 44 45 46 47 49 51 55
    expression_list1 <expressions> (56)
        on left: 43 44 45
        on right: 19 20 21 45
    expression_list2 <expressions> (57)
        on left: 46 47 48
        on right: 24 47
    let <expression> (58)
        on left: 49 50 51 52
        on right: 25 50 52
    case_list <cases> (59)
        on left: 53 54
        on right: 26 54
    case <case_> (60)
        on left: 55
        on right: 53 54


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   11 feature: error . ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID . ':' TYPEID optional_assign ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   11 feature: error ';' .

    $default  reduce using rule 11 (feature)


State 21

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 12 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


State 22

   10 feature: OBJECTID ':' . TYPEID optional_assign ';'

    TYPEID  shift, and go to state 28


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 25

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


State 26

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   14 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 27

   13 formal_list: formal .

    $default  reduce using rule 13 (formal_list)


State 28

   10 feature: OBJECTID ':' TYPEID . optional_assign ';'

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 16 (optional_assign)

    optional_assign  go to state 34


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 30

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


State 31

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 36


State 32

   14 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


State 33

   17 optional_assign: ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52


State 34

   10 feature: OBJECTID ':' TYPEID optional_assign . ';'

    ';'  shift, and go to state 53


State 35

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


State 36

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 54


State 37

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


State 38

   22 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 55


State 39

   25 expression: LET . let

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let  go to state 58


State 40

   23 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 59


State 41

   26 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 60


State 42

   27 expression: NEW . TYPEID

    TYPEID  shift, and go to state 61


State 43

   28 expression: ISVOID . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 62


State 44

   41 expression: STR_CONST .

    $default  reduce using rule 41 (expression)


State 45

   40 expression: INT_CONST .

    $default  reduce using rule 40 (expression)


State 46

   42 expression: BOOL_CONST .

    $default  reduce using rule 42 (expression)


State 47

   18 expression: OBJECTID . ASSIGN expression
   21           | OBJECTID . '(' expression_list1 ')'
   39           | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 39 (expression)


State 48

   37 expression: NOT . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 65


State 49

   33 expression: '~' . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66


State 50

   24 expression: '{' . expression_list2 '}'

    error       shift, and go to state 67
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression        go to state 68
    expression_list2  go to state 69


State 51

   38 expression: '(' . expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 70


State 52

   17 optional_assign: ASSIGN expression .
   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 17 (optional_assign)


State 53

   10 feature: OBJECTID ':' TYPEID optional_assign ';' .

    $default  reduce using rule 10 (feature)


State 54

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 80


State 55

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   22           | IF expression . THEN expression ELSE expression FI
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression

    THEN  shift, and go to state 81
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 56

   51 let: error . IN expression
   52    | error . ',' let

    IN   shift, and go to state 82
    ','  shift, and go to state 83


State 57

   49 let: OBJECTID . ':' TYPEID optional_assign IN expression
   50    | OBJECTID . ':' TYPEID optional_assign ',' let

    ':'  shift, and go to state 84


State 58

   25 expression: LET let .

    $default  reduce using rule 25 (expression)


State 59

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   23           | WHILE expression . LOOP expression POOL
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression

    LOOP  shift, and go to state 85
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 60

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   26           | CASE expression . OF case_list ESAC
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression

    OF   shift, and go to state 86
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 61

   27 expression: NEW TYPEID .

    $default  reduce using rule 27 (expression)


State 62

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   28           | ISVOID expression .
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 28 (expression)


State 63

   18 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 87


State 64

   21 expression: OBJECTID '(' . expression_list1 ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 43 (expression_list1)

    expression        go to state 88
    expression_list1  go to state 89


State 65

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression
   37           | NOT expression .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 37 (expression)


State 66

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | '~' expression .
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 33 (expression)


State 67

   48 expression_list2: error . ';'

    ';'  shift, and go to state 90


State 68

   19 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   20           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | expression . '<' expression
   35           | expression . LE expression
   36           | expression . '=' expression
   46 expression_list2: expression . ';'

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 91


State 69

   24 expression: '{' expression_list2 . '}'
   47 expression_list2: expression_list2 . expression ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '}'         shift, and go to state 92
    '('         shift, and go to state 51

    expression  go to state 93


State 70
